# Smart_Agriculture

./: .gitignore  README.md  deploy  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: backend-ci.yml  deploy-backend.yml  deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  frontend-ci.yml  secret-scan.yml
Nginx/: nginx.config
admin/: .firebaserc  .gitignore  deploy  firebase.json  index.html  package-lock.json  package.json
admin/.firebase/: hosting.LmZpcmViYXNlL2FkbWluLXNtYXJ0LWZhcm0tYWdyaWN1bHR1cmUvaG9zdGluZw.cache
admin/src/: App.tsx  index.css  main.tsx
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  API.py  Dockerfile  alembic.ini  deploy  pyproject.toml  requirements.txt  tables.py
backend/alembic/: env.py
backend/alembic/versions/: 01b74227e0ba_update_on_livestock_added_more_columns.py  07970726dd53_fixed_import_error_at_payment_table.py  0d87485d5f87_create_users_table.py  0db673ff154d_table_upate_for_notification_and_.py  245e23b50962_livestock_table.py  31545d5f0be7_payment_table_update.py  3176c9d8326f_unique_querying_for_performance_email_.py  40301242f146_payment_table_update.py  4bacd3bc81ab_updated_users_table.py  5554d1425f0e_tables_for_reports.py  5ddb2b5a0086_product_tables.py  63f861eaabba_updates_livestock_coluns.py  6bf074e7b082_feeds_table.py  759dae82dd81_payment_table_update.py  7c621e1ca7fe_first_migration.py  982b29aafd11_tables.py  986e6425211d_add_is_verified_to_subscribers.py  aad09c0a1d2d_tab_le_admin.py  b4f2bd02e94d_tables_livestock.py  b9826ca97d09_payment_table_and_financial_wallet.py  c0e189c8f823_table_update_for_users_payment_and_.py  d880fbc4e06a_fixed_import_error_at_payment_table.py  da32c570ac13_initial.py  f52b2554614c_livestock_table_new_columns.py  f906008aff56_tables_update.py
backend/common/: dependencies.py
backend/config/: database.py  lifespan.py  logger.py  middleware.py  rate_limiting.py  redis.py  security.py  setting.py
backend/config/audit/: context.py  logger.py
backend/config/audit/middleware/: error.py  logging.py  performance.py  request_id.py  security.py
backend/config/redis/: cache.py  client.py  keys.py
backend/controller/: admin_auth.py  admin_authentication.py  admin_router_controller.py  auth.py  authcontroller.py  farm.py  farmAnalytic.py  users.py
backend/db/: postgre_db.py
backend/hooks/: call.py  router.py  services.py  tasks.py
backend/message_broker/: config.py  dispatch.py  key.py  queue.py  redis.py  status.py
backend/message_broker/observibility/: inspector.py  lifecycle.py  metric.py  router.py
backend/middleware/: admin_auth.py  auth.py
backend/model/: auth.py  farming.py  farming_table.py  tables.py  user.py
backend/modules/Admins/auth/: depedency.py  model.py  repository.py  router.py  schema.py  seed.py  service.py
backend/modules/Admins/finance/: repository.py  router.py  service.py
backend/modules/ai/: service.py  tasks.py
backend/modules/ai/pipelines/calving/: predictor.py  processor.py  trainer.py
backend/modules/ai/providers/: base.py  gemini.py
backend/modules/analytics/: repository.py  router.py
backend/modules/auth/: models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/modules/farmers/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/livestock/: model.py  repository.py  router.py  schema.py  service.py  tasks.py
backend/modules/notifications/: model.py  repository.py  router.py  schemas.py  service.py  tasks.py  utils.py
backend/modules/notifications/providers/: email.py  kai_whatsapp.py  map.py  push.py  sms.py
backend/modules/nutrition/: model.py  repository.py  router.py  schema.py  service.py  tasks.py
backend/modules/payments/: model.py  repository.py  router.py  schema.py  service.py
backend/modules/reports/: model.py  repository.py  router.py  schema.py  service.py
backend/modules/reports/templates/: financial_report.html  payment_receipt.html
backend/modules/reports/utils/: gen_pay.py
backend/modules/reproduction/: model.py  repository.py  router.py  schema.py  service.py
backend/services/: auth.py  farmAnalytic.py  farmInput.py  user.py
backend/services/admin/: auth.py
backend/tests/: test.py  test_main.py
backend/utils/: hashing.py  jwt.py  otp.py  sendOtpEmail.py
backend/worker/: app.py  beat.py  celery_app.py  celery_config.py  confiig.py  models.py
backend_node/: index.js  package-lock.json  package.json
client/: package-lock.json  package.json  postcss.config.mjs  tailwind.config.js
client/app/: globals.css
docs/: PRD.md  roadmap.md  structure.md
frontend/: .dockerignore  .eslintrc.json  .firebaserc  .gitignore  .prettierrc  Dockerfile  deploy  firebase.json  jest.config.ts  middleware.ts  next-pwa.d.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/.firebase/: hosting.Lm5leHQ.cache  hosting.cHVibGlj.cache  (+2 more)
frontend/public/: sw.js  (+2 more)
(+176 files in other folders)
