
[project]
name = "Smart_Farm"
version = "0.1.0"
description = "Smart Agriculture backend for handling AI, ML and client request"
#readme = "README.md"
authors = [
    { name = "samuel Njoroge", email ="samnjorokibandi@gmail.com" }
]
maintainers = [
    { name = "Samuel Njoroge", email = "samnjorokibandi@gmail.com" }
]

classifiers = [
    "Programming Language :: python :: 3",
    "Operating System :: OS Independent",
]

keywords = [
    "fastapi",
    "farming"
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "africastalking==2.0.2",
    "aiosmtplib==3.0.2",
    "alembic==1.16.4",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "billiard==4.2.4",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "cachecontrol==0.14.4",
    "celery==5.6.3",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cryptography==45.0.5",
    "cssselect2==0.9.0",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "distlib==0.4.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "fastapi==0.115.13",
    "fastapi-cache2==0.2.2",
    "fastapi-mail==1.5.2",
    "filelock==3.20.1",
    "firebase-admin==7.4.0",
    "fonttools==4.62.1",
    "fpdf2==2.8.7",
    "google-api-core==2.30.3",
    "google-auth==2.49.2",
    "google-cloud-core==2.5.1",
    "google-cloud-firestore==2.26.0",
    "google-cloud-storage==3.10.1",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.8.2",
    "googleapis-common-protos==1.74.0",
    "greenlet==3.2.3",
    "grpcio==1.62.2",
    "grpcio-status==1.62.2",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "identify==2.6.15",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "kombu==5.6.2",
    "librt==0.7.5",
    "limits==5.4.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "msgpack==1.1.2",
    "mypy-extensions==1.1.0",
    "nodeenv==1.10.0",
    "packaging==25.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pendulum==3.2.0",
    "pillow==12.2.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "proto-plus==1.27.2",
    "protobuf==6.33.6",
    "psycopg2==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pydyf==0.12.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyphen==0.17.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.5.0",
    "pytokens==0.3.0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "redis==7.2.0",
    "requests==2.32.5",
    "responses==0.26.0",
    "rsa==4.9.1",
    "schema==0.7.8",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "structlog==25.5.0",
    "tinycss2==1.5.1",
    "tinyhtml5==2.1.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn[standard]==0.34.3",
    "vine==5.1.0",
    "virtualenv==20.35.4",
    "wcwidth==0.6.0",
    "weasyprint==68.1",
    "webencodings==0.5.1",
    "wrapt==1.17.2",
    "zopfli==0.4.1",
]
[dependency-groups]
dev = [
    "black==25.12.0",
    "ruff==0.14.10",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pre-commit==4.5.1",
    "isort==7.0.0"
]

[project.urls]
Homepage = "https://smart-agriculture-pied.vercel.app/"
Repository = "https://github.com/samnjoro30/Smart_Agriculture.git"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

